--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "gemini-moderator",
+  "version": "1.0.0",
+  "type": "module",
   "dependencies": {
     "@google/generative-ai": "^0.2.1"
   }
