--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gemini-moderator",
+  "name": "crypto-moderator",
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "@google/generative-ai": "^0.2.1"
+    "groq-sdk": "^0.3.3"
   }
 }
