--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "crypto-moderator",
+  "name": "token-moderator",
   "version": "1.0.0",
-  "type": "module",
   "dependencies": {
-    "groq-sdk": "^0.3.3"
+    "groq-sdk": "^0.7.0"
   }
 }
